Fix img width on small viewpoint

--- a/app/assets/stylesheets/views/signed_in_homepage.css.scss
+++ b/app/assets/stylesheets/views/signed_in_homepage.css.scss
@@ -143,6 +143,10 @@ html.signed_in_homepage {
         position: relative;
         margin: 1rem -1rem;
 
+        img {
+          width: 100%;
+        }
+
         .feed-fancy {
           @include transition(opacity .2s ease);
           opacity: 0;
